...
                        tabletLandscape: false,
                        desktop: false,
                      ))
                        Align(
                          alignment: AlignmentDirectional(0.06, -0.55),
                          child: FFButtonWidget(
                            key: ValueKey('Button_15ac'),
                            onPressed: () async {
                              context.pushNamed(Pteranodon1Widget.routeName);
                            },
                            text: 'そらを とぶ きょうりゅう',
                            options: FFButtonOptions(
                              width: 200.0,
...
                        tabletLandscape: false,
                        desktop: false,
                      ))
                        Align(
                          alignment: AlignmentDirectional(0.05, -0.08),
                          child: FFButtonWidget(
                            key: ValueKey('Button_vznc'),
                            onPressed: () async {
                              context.pushNamed(Trex1Widget.routeName);
                            },
                            text: 'あるく きょうりゅう',
                            options: FFButtonOptions(
                              width: 200.0,
...
                        tabletLandscape: false,
                        desktop: false,
                      ))
                        Align(
                          alignment: AlignmentDirectional(0.02, 0.36),
                          child: FFButtonWidget(
                            key: ValueKey('Button_hm3m'),
                            onPressed: () async {
                              context.pushNamed(Ple1Widget.routeName);
                            },
                            text: 'およぐ きょうりゅう',
                            options: FFButtonOptions(
                              width: 200.0,
...
