import 'dart:io';
import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:google_fonts/google_fonts.dart';
import 'package:integration_test/integration_test.dart';
import 'package:dinosaur_encyclopedia/flutter_flow/flutter_flow_widgets.dart';
import 'package:dinosaur_encyclopedia/flutter_flow/flutter_flow_theme.dart';
import 'package:dinosaur_encyclopedia/index.dart';
import 'package:dinosaur_encyclopedia/main.dart';
import 'package:dinosaur_encyclopedia/flutter_flow/flutter_flow_util.dart';

import 'package:dinosaur_encyclopedia/backend/firebase/firebase_config.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    await initFirebase();

    await FlutterFlowTheme.initialize();
  });

  testWidgets('Dinousar', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(MyApp(
      entryPage: Trex1Widget(),
    ));
    await GoogleFonts.pendingFonts();

    await tester.tap(find.byKey(const ValueKey('Button_15ac')));
    await tester.tap(find.byKey(const ValueKey('Button_vznc')));
    await tester.tap(find.byKey(const ValueKey('Button_hm3m')));
  }, skip: true);

  testWidgets('Lean', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(MyApp(
      entryPage: HomePageWidget(),
    ));
    await GoogleFonts.pendingFonts();

    await tester.tap(find.byKey(const ValueKey('Button_15ac')));
    await tester.tap(find.byKey(const ValueKey('Button_vznc')));
    await tester.tap(find.byKey(const ValueKey('Button_hm3m')));
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }

  return false;
}
